# gmic-gegl-plugin

./: .gitignore  README.md  STATUS.md  generate-status.sh  generator.vala  gmic_filter.vala  gmic_wrapper.cpp  io.flatscrew.RasterFlow.Extension.GMICRuntime.yml  main.vala  meson.build  meson_options.txt  normalizator.vala  org.gimp.GIMP.Plugin.GMICRuntime.yml  org.gimp.GIMP.Plugin.GmicGeglPlugins.yml  package-flatpak.sh  package-gimp3-flatpak.sh  package-gimp3-operations.sh  package-linux-gimp3-operations.sh  package-linux-rasterflow-flatpak.sh  package-rasterflow-flatpak.sh  package-rasterflow-operations.sh  package-windows-operations.sh  stdlib_loader.vala  test.c  test_normalizator.vala
.github/workflows/: release-plugins.yml
gegl/: gegl_gmic.c  gegl_gmic_wrapper.cpp  meson.build
generator/: blacklist.vala  generator.vala  meson.build  operation_generator.vala  operations_meson_build_generator.vala
gimp-linux/: install.sh
gmictest/: meson.build  test.c
operations/: gmic_runner.c  gmic_runner.h  meson.build
operations/commands/: meson.build
operations/commands/cartoon/: cartoon.c  meson.build
operations/commands/fx_drop_water/: fx_drop_water.c  meson.build
operations/commands/fx_lomo/: fx_lomo.c  meson.build
operations/commands/fx_tk_metallic/: enums.h  fx_tk_metallic.c  meson.build
operations/commands/fx_watermark_visible/: fx_watermark_visible.c  meson.build
operations/generic/: gegl_gmic.c  meson.build
patches/: remove_gmic_mkdir.patch
rasterflow-linux/: install.sh  uninstall.sh
templates/: commands_meson.build.meson.tmpl  op.c.tmpl  op.enum.c.tmpl  op.enum.h.tmpl  op.enum.tmpl  op.enums.c.tmpl  op.meson.build.tmpl
windows_installer/: installer-gimp3.iss
